--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,11 @@ line-length=79
 [tool.ruff]
 
 line-length=79
+
+[pycodestyle]
+
+# The E203 formatting rule ("there should be no space before colons") conflicts
+# with the way Ruff formats slices (eg s[n + 1 :] -- because Ruff treats colon
+# in slices as binary operators, so adds a space between it and the
+# operand(s)). We therefore ignore this rule here.
+ignore = E203
