--- a/.github/workflows/quality-controls_python.yml
+++ b/.github/workflows/quality-controls_python.yml
@@ -19,6 +19,6 @@ jobs:
           pip install pycodestyle ruff
       - name: Run linters
         run: |
-          pycodestyle --config=pyproject.toml ${{ github.workspace }}/postprocess
+          pycodestyle ${{ github.workspace }}/postprocess
           ruff check  --diff ${{ github.workspace }}/postprocess
           ruff format --diff ${{ github.workspace }}/postprocess
