--- a/.github/workflows/quality-controls_python.yml
+++ b/.github/workflows/quality-controls_python.yml
@@ -2,7 +2,7 @@ name: Quality controls for Python code
 run-name: Run quality controls for Python code
 on:
   workflow_dispatch:
-  pull_requests:
+  pull_request:
     paths:
       - '**.py'
 jobs:
