--- a/.github/workflows/quality-controls_python.yml
+++ b/.github/workflows/quality-controls_python.yml
@@ -2,8 +2,7 @@ name: Quality controls for Python code
 run-name: Run quality controls for Python code
 on:
   workflow_dispatch:
-    branches:
-      - '**'
+  push:
   pull_request:
     paths:
       - '**.py'
