Add license statement

--- a/.github/workflows/quality-controls_python.yml
+++ b/.github/workflows/quality-controls_python.yml
@@ -1,3 +1,7 @@
+# Copyright (c) 2025 LATMOS (France, UMR 8190) and IGE (France, UMR 5001).
+#
+# License: BSD 3-clause "new" or "revised" license (BSD-3-Clause).
+
 name: Quality controls for Python code
 run-name: Run quality controls for Python code
 on:
