--- a/.github/workflows/ruff.yaml
+++ b/.github/workflows/ruff.yaml
@@ -6,6 +6,7 @@ name: Quality controls for Python code
 run-name: Run quality controls for Python code
 on:
   workflow_dispatch:
+  push:
   pull_request:
     paths:
       - '**.py'
@@ -17,15 +18,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
-      - name: Prepare Python environment
-        uses: actions/setup-python@v5
+      - name: Run Ruff
+        uses: astral-sh/ruff-action@v3
         with:
-          python-version: '3.x'
-      - name: Install required Python packages
-        run: |
-          python -m pip install --upgrade pip
-          pip install ruff
-      - name: Run checkers and linters
-        run: |
-          ruff check  --diff ${{ github.workspace }}/postprocess
-          ruff format --diff ${{ github.workspace }}/postprocess
+          src: "./postprocess"
+          args: "format --check --diff"
