--- a/.github/workflows/ruff.yaml
+++ b/.github/workflows/ruff.yaml
@@ -18,8 +18,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+      - name: Uname
+        run: |
+          uname -a
       - name: Run Ruff
         uses: astral-sh/ruff-action@v3
         with:
+          version: "0.13.0"
+          checksum: "ec837f0fd6c2bdae082ac6af0417b235fdc500de56cecad9b1969c683a3c1126"
           src: "./postprocess"
           args: "format --check --diff"
+      - name: Which ruff
+        run: |
+          which ruff
