--- a/.github/workflows/ruff.yaml
+++ b/.github/workflows/ruff.yaml
@@ -6,7 +6,6 @@ name: Quality controls for Python code
 run-name: Run quality controls for Python code
 on:
   workflow_dispatch:
-  push:
   pull_request:
     paths:
       - '**.py'
@@ -21,13 +20,14 @@ jobs:
       - name: Uname
         run: |
           uname -a
-      - name: Run Ruff
+      - name: Prepare Ruff
         uses: astral-sh/ruff-action@v3
         with:
-          version: "0.13.0"
-          checksum: "ec837f0fd6c2bdae082ac6af0417b235fdc500de56cecad9b1969c683a3c1126"
-          src: "./postprocess"
-          args: "format --check --diff"
+          args: "--version"
       - name: Which ruff
         run: |
           which ruff
+      - name: Run Ruff
+        run: |
+          ruff check  --diff ${{ github.workspace }}/postprocess
+          ruff format --diff ${{ github.workspace }}/postprocess
