--- a/.github/workflows/ruff.yaml
+++ b/.github/workflows/ruff.yaml
@@ -9,7 +9,7 @@ on:
     paths:
       - '**.py'
 jobs:
-  Run-Quality-Controls:
+  Ruff:
     runs-on: ubuntu-latest
     steps:
       - name: Clone repository
@@ -22,6 +22,6 @@ jobs:
           version: "latest"
           args: "--version"
       - name: Run Ruff (check)
-        run: ruff check --diff ${{ github.workspace }}/postprocess
+        run: ruff check --diff postprocess
       - name: Run Ruff (format)
-        run: ruff format --diff ${{ github.workspace }}/postprocess
+        run: ruff format --diff postprocess
