--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
+# Copyright (c) 2025 LATMOS (France, UMR 8190) and IGE (France, UMR 5001).
+#
+# License: BSD 3-clause "new" or "revised" license (BSD-3-Clause).
+__pycache__
 .DS_Store
