--- a/.github/workflows/unit-tests-bash-commons.yaml
+++ b/.github/workflows/unit-tests-bash-commons.yaml
@@ -10,6 +10,7 @@ on:
   pull_request:
     paths:
       - 'run/commons.bash'
+      - 'run/test_commons.bash'
 jobs:
   unit_tests:
     runs-on: ubuntu-latest
@@ -21,5 +22,5 @@ jobs:
       - name: Run the unit tests
         run: |
           cd ${{ github.workspace }}/run
-          chmod 500 ./commons.bash
-          ./commons.bash
+          chmod 500 ./test_commons.bash
+          ./test_commons.bash
